log/build_2024-11-08_16-30-53/turtlebot3_gui/stdout_stderr.log
running egg_info
writing ../../build/turtlebot3_gui/turtlebot3_gui.egg-info/PKG-INFO
writing dependency_links to ../../build/turtlebot3_gui/turtlebot3_gui.egg-info/dependency_links.txt
writing entry points to ../../build/turtlebot3_gui/turtlebot3_gui.egg-info/entry_points.txt
writing requirements to ../../build/turtlebot3_gui/turtlebot3_gui.egg-info/requires.txt
writing top-level names to ../../build/turtlebot3_gui/turtlebot3_gui.egg-info/top_level.txt
reading manifest file '../../build/turtlebot3_gui/turtlebot3_gui.egg-info/SOURCES.txt'
writing manifest file '../../build/turtlebot3_gui/turtlebot3_gui.egg-info/SOURCES.txt'
running build
running build_py
copying turtlebot3_gui/turtlebot3_gui.py -> /home/psb/rokey_c_2_ws/build/turtlebot3_gui/build/lib/turtlebot3_gui
running install
running install_lib
copying /home/psb/rokey_c_2_ws/build/turtlebot3_gui/build/lib/turtlebot3_gui/turtlebot3_gui.py -> /home/psb/rokey_c_2_ws/install/turtlebot3_gui/lib/python3.10/site-packages/turtlebot3_gui
byte-compiling /home/psb/rokey_c_2_ws/install/turtlebot3_gui/lib/python3.10/site-packages/turtlebot3_gui/turtlebot3_gui.py to turtlebot3_gui.cpython-310.pyc
  File "/home/psb/rokey_c_2_ws/install/turtlebot3_gui/lib/python3.10/site-packages/turtlebot3_gui/turtlebot3_gui.py", line 26
    '/table_number',
    ^^^^^^^^^^^^^^^
SyntaxError: invalid syntax

running install_data
running install_egg_info
removing '/home/psb/rokey_c_2_ws/install/turtlebot3_gui/lib/python3.10/site-packages/turtlebot3_gui-0.0.0-py3.10.egg-info' (and everything under it)
Copying ../../build/turtlebot3_gui/turtlebot3_gui.egg-info to /home/psb/rokey_c_2_ws/install/turtlebot3_gui/lib/python3.10/site-packages/turtlebot3_gui-0.0.0-py3.10.egg-info
running install_scripts
Installing nav_client script to /home/psb/rokey_c_2_ws/install/turtlebot3_gui/lib/turtlebot3_gui
Installing nav_server script to /home/psb/rokey_c_2_ws/install/turtlebot3_gui/lib/turtlebot3_gui
Installing pub_topic script to /home/psb/rokey_c_2_ws/install/turtlebot3_gui/lib/turtlebot3_gui
Installing send_goal script to /home/psb/rokey_c_2_ws/install/turtlebot3_gui/lib/turtlebot3_gui
Installing service_client script to /home/psb/rokey_c_2_ws/install/turtlebot3_gui/lib/turtlebot3_gui
Installing service_server script to /home/psb/rokey_c_2_ws/install/turtlebot3_gui/lib/turtlebot3_gui
Installing sub_topic script to /home/psb/rokey_c_2_ws/install/turtlebot3_gui/lib/turtlebot3_gui
Installing turtlebot3_gui script to /home/psb/rokey_c_2_ws/install/turtlebot3_gui/lib/turtlebot3_gui
Installing turtlebot3_move script to /home/psb/rokey_c_2_ws/install/turtlebot3_gui/lib/turtlebot3_gui
Installing turtlebot3_point script to /home/psb/rokey_c_2_ws/install/turtlebot3_gui/lib/turtlebot3_gui
writing list of installed files to '/home/psb/rokey_c_2_ws/build/turtlebot3_gui/install.log'
